# plugins

./: README.md  catalog_seed.cursor.json  catalog_seed.json
plugins/agentforce-adlc/: .gitignore  AI_ETHICS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  settings.json
plugins/agentforce-adlc/.claude-plugin/: marketplace.json  plugin.json
plugins/agentforce-adlc/agents/: adlc-author.md  adlc-engineer.md  adlc-orchestrator.md  adlc-qa.md
plugins/agentforce-adlc/hooks/: hooks.json
plugins/agentforce-adlc/scripts/: discover.py  org_describe.py  scaffold.py
plugins/agentforce-adlc/scripts/generators/: apex_stub.py  apex_test_stub.py  flow_xml.py  permission_set_xml.py  remote_site_xml.py
plugins/agentforce-adlc/shared/hooks/: skills-registry.json
plugins/agentforce-adlc/shared/hooks/scripts/: agent-validator.py  guardrails.py  session-init.py  stdin_utils.py
plugins/agentforce-adlc/shared/sf-cli/: sf_cli.py
plugins/agentforce-adlc/skills/agentforce-generate/: README.md  SKILL.md
plugins/agentforce-adlc/skills/agentforce-generate/assets/: agent-spec-template.md  invocable-apex-template.cls
plugins/agentforce-adlc/skills/agentforce-generate/references/: action-prompt-templates.md  actions-reference.md  (+22 more)
plugins/agentforce-adlc/skills/agentforce-observe/: SKILL.md
plugins/agentforce-adlc/skills/agentforce-secure/: SKILL.md
plugins/agentforce-adlc/skills/agentforce-test/: SKILL.md
plugins/agentforce-adlc/tests/: test_discover.py  test_hooks.py  test_scaffold.py  test_security_scoring.py
plugins/agentforce-adlc/tools/: install.py  install.sh
plugins/atlan/modelcontextprotocol/: .dockerignore  .env.template  Dockerfile  README.md  client.py  fastmcp.json  middleware.py  pyproject.toml  server.py  settings.py
plugins/atlan/modelcontextprotocol/docs/: DEPLOYMENT.md  LOCAL_BUILD.md
plugins/atlan/modelcontextprotocol/tools/: __init__.py  assets.py  domain.py  dq_rules.py  dsl.py  glossary.py  lineage.py  models.py  query.py  search.py
plugins/atlan/modelcontextprotocol/utils/: __init__.py  assets.py  constants.py  parameters.py  search.py
plugins/data/astro-airflow-mcp/: CLAUDE.md  Makefile  pyproject.toml
plugins/data/astro-airflow-mcp/scripts/: run-integration-tests.sh
plugins/data/astro-airflow-mcp/tests/: test_astro_cli.py  test_cli_api.py  test_cli_migrate.py  test_cli_runs.py  test_read_only.py  test_server.py
plugins/datarobot-agent-skills/: .env.example  .gitignore  .licenserc.yaml  .yamlfmt.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  gemini-extension.json  package.json  pyproject.toml  ruff.toml
plugins/datarobot-agent-skills/.claude-plugin/: marketplace.json  plugin.json
plugins/datarobot-agent-skills/.cursor-plugin/: plugin.json
plugins/datarobot-agent-skills/.githooks/: pre-commit
plugins/datarobot-agent-skills/.github/: CODEOWNERS
plugins/datarobot-agent-skills/.github/workflows/: lint.yml  publish-catalog.yml  publish-npm.yml  review-router.yml  test-skills-e2e.yml  trivy-scan.yml
plugins/datarobot-agent-skills/.opencode-plugin/: index.ts
plugins/datarobot-agent-skills/.opencode-plugin/themes/: datarobot-brand.json  datarobot.json
plugins/datarobot-agent-skills/.skills/progressive-disclosure/: SKILL.md
plugins/datarobot-agent-skills/docs/: AGENT_FRAMEWORK_INTEGRATION.md  README.md
plugins/datarobot-agent-skills/docs/.well-known/: ai-catalog.json
plugins/datarobot-agent-skills/skills/datarobot-agent-assist/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-app-framework-cicd/: QUICK_REFERENCE.md  README.md  SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-data-preparation/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-discover/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-external-agent-monitoring/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-feature-engineering/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-model-deployment/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-model-explainability/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-model-monitoring/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-model-training/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-predictions/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-setup/: SKILL.md
plugins/datarobot-agent-skills/skills/datarobot-workload-api/: SKILL.md
plugins/datarobot-agent-skills/tests/e2e/: test_skills_e2e.py
plugins/datarobot-agent-skills/tests/integration/: test_catalog.py  test_codeowners.py  test_plugins.py  test_skills.py  test_wait_for_build_contract.py  test_workload_api_spec_conformance.py
plugins/slack/: .cursor-mcp.json  .env.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  package.json  pyproject.toml
plugins/slack/.changeset/: add-rumdl-markdown-linter.md  announce-releases-on-slack.md  publish-github-releases.md
plugins/slack/.claude/: settings.json
plugins/slack/.claude-plugin/: plugin.json
plugins/slack/.cursor-plugin/: plugin.json
plugins/slack/.github/: CODEOWNERS  contributing.md  dependabot.yml  maintainers_guide.md  pull_request_template.md  release.yml
plugins/slack/.github/workflows/: ci-build.yml  dependencies.yml  release.yml
plugins/slack/commands/: channel-digest.md  draft-announcement.md  find-discussions.md  standup.md  summarize-channel.md
plugins/slack/scripts/: changeset_version.sh  cursor.py  sync_versions.py
plugins/slack/skills/block-kit/: SKILL.md
plugins/slack/skills/create-slack-app/: SKILL.md
plugins/slack/skills/slack-api/: SKILL.md
plugins/slack/skills/slack-cli/: SKILL.md
plugins/slack/skills/slack-messaging/: SKILL.md
plugins/slack/skills/slack-search/: SKILL.md
plugins/slack/tests/: config.py  skill.py
plugins/slack/tests/eval/: test_tool_selection.py
plugins/slack/tests/support/: judge.py  tools.py
plugins/slack/tests/unit/: test_config.py  test_cross_skill_references.py  test_discovery.py  test_frontmatter.py  test_markdown_structure.py
(+7486 files in other folders)
