[project]
name = "datarobot-agent-skills"
version = "0.0.1"
description = "DataRobot agent skills"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10",
]
integration = [
    "datarobot-genai",
    "python-frontmatter>=1.1",
    "pytest>=8.0",
    "codeowners>=0.8.0",
    "httpx>=0.27",
]
e2e = [
    "datarobot-agent-tester @ git+https://github.com/datarobot/datarobot-agent-tester@main",
    "python-dotenv>=1.2.2",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]

[tool.mypy]
# The strategy moving forward is to delete these one by one and get the errors back to zero.
exclude = [
    "skills/datarobot-data-preparation",
    "skills/datarobot-predictions",
    "skills/datarobot-model-training",
    "skills/datarobot-external-agent-monitoring",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = "ignore-without-code"
implicit_reexport = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
