[project]
name = "atlan-mcp-server"
dynamic = ["version"]
description = "Atlan Model Context Protocol server for interacting with Atlan services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    {name = "AtlanHQ", email = "engineering@atlan.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastmcp>=2.14.0",
    "pyatlan>=6.0.1",
    "uvicorn>=0.35.0"
]

[project.scripts]
atlan-mcp-server = "server:main"

[tool.uv]
constraint-dependencies = [
    "authlib>=1.6.6",
    "cryptography>=46.0.5",
    "h11>=0.16.0",
    "python-multipart>=0.0.22",
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
]

[project.urls]
"Homepage" = "https://github.com/atlanhq/agent-toolkit"
"Documentation" = "https://ask.atlan.com/hc/en-us/articles/12525731740175-How-to-implement-the-Atlan-MCP-server"
"Bug Tracker" = "https://github.com/atlanhq/agent-toolkit/issues"
"Source" = "https://github.com/atlanhq/agent-toolkit.git"
"Changelog" = "https://github.com/atlanhq/agent-toolkit/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "version.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
