[project]
name = "astro-airflow-mcp"
dynamic = ["version"]
description = "A FastMCP server for Airflow integration that can run standalone or as an Airflow 2/3 plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pinned to a bounded range: 3.4.3 introduced HostOriginGuardMiddleware and the
    # host_origin_protection/allowed_hosts kwargs the plugin relies on (see plugin.py).
    # The upper bound guards against another default-behavior change in a new major.
    "fastmcp>=3.4.3,<4",
    "filelock>=3.0.0",
    "httpx>=0.27.0",
    "packaging>=21.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
plugin = [
    "apache-airflow>=3.0.0",
    "fastapi>=0.100.0",
]
plugin-v2 = [
    # No extra deps needed: Flask comes with Airflow 2.x, asyncio is stdlib.
    # Install into an Airflow 2.4+ environment: pip install astro-airflow-mcp
]

[project.scripts]
astro-airflow-mcp = "astro_airflow_mcp.__main__:main"
af = "astro_airflow_mcp.cli.main:cli_main"

[project.entry-points."airflow.plugins"]
airflow_mcp = "astro_airflow_mcp.plugin:AirflowMCPPlugin"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+dev"

[tool.hatch.version.raw-options]
root = ".."
tag_regex = "^astro-airflow-mcp-(?P<version>[vV]?\\d+(?:\\.\\d+)*(?:[._-]?\\w+)*)$"
git_describe_command = ["git", "describe", "--tags", "--long", "--match", "astro-airflow-mcp-*"]

[tool.hatchling.build.targets.wheel]
packages = ["src/astro_airflow_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "prek>=0.3.2",
    "ty>=0.0.17",
    "bandit[toml]>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "ISC",    # implicit string concatenation
    "LOG",    # flake8-logging
    "TC",     # type-checking imports
    "G",      # flake8-logging-format
    "RET",    # flake8-return
    "PIE",    # flake8-pie (PIE790: unnecessary pass)
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "TID252", # relative imports from parent
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG002", # unused method argument
    "RUF012", # mutable class attributes (common pattern)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG001", "ARG002", "PT011"]  # Allow unused arguments and broad pytest.raises in tests

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used check (common in tests)

[tool.ty.analysis]
# Equivalent to mypy's --ignore-missing-imports
allowed-unresolved-imports = ["**"]  # Allow all unresolved imports

[tool.ty.src]
# Check only the astro_airflow_mcp package, exclude tests
include = ["src/astro_airflow_mcp/**"]
exclude = ["tests/**"]

[tool.ty.rules]
# Relax strict optional checking to match mypy's --no-strict-optional behavior
# These rules are more strict than mypy's settings, so we downgrade to warnings
invalid-argument-type = "warn"      # Allow None in optional parameters
unresolved-attribute = "warn"       # Allow accessing attributes on Optional types
missing-argument = "warn"           # Allow missing arguments with defaults
invalid-method-override = "warn"    # Allow method override incompatibilities
invalid-assignment = "warn"         # Allow fallback base class pattern (plugin.py)
