[project]
name = "analyzing-data-scripts"
version = "0.0.0"
description = "Internal scripts for analyzing-data skill (not a published package)"
requires-python = ">=3.11"
classifiers = [
    "Private :: Do Not Upload",
]

[project.optional-dependencies]
test = [
    "pytest",
    "sqlalchemy",
    "polars",
    "pandas",
    "pyyaml",
    "python-dotenv",
    "jupyter-client>=8.0.0",
]
test-integration = [
    "pytest",
    "sqlalchemy",
    "polars",
    "pandas",
    "pyyaml",
    "python-dotenv",
    "psycopg[binary]",
    "duckdb",
    "duckdb-engine",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
]
